# haskell-example

./: Example.html  README.md  cabal.project.local  doc-index.html  doc-index.json  haskell-example.cabal  haskell-example.haddock  hie.yaml  index.html  meta.json
.github/workflows/: build.yml
ghc-9.2.2/haskell-example-0.0.0/cache/: build  config
ghc-9.2.2/haskell-example-0.0.0/l/haskell-example-internal/cache/: build  config
ghc-9.2.2/haskell-example-0.0.0/l/haskell-example-internal/package.conf.inplace/: haskell-example-0.0.0-inplace-haskell-example-internal.conf
ghc-9.2.2/haskell-example-0.0.0/t/haskell-example-test/: setup-config
ghc-9.2.2/haskell-example-0.0.0/t/haskell-example-test/cache/: build  config
src/: Example.html
src/haskell-example/: Example.hs
src/haskell-example-benchmark/: Main.hs
src/haskell-example-internal/Example/: Internal.hs
src/haskell-example-test/: ExampleSpec.hs
x86_64-linux/ghc-8.10.7/haskell-example-0.0.0/: setup-config
x86_64-linux/ghc-8.10.7/haskell-example-0.0.0/cache/: build  config  registration
x86_64-linux/ghc-8.10.7/haskell-example-0.0.0/doc/html/haskell-example/: Example.html  (+3 more)
x86_64-linux/ghc-8.10.7/haskell-example-0.0.0/l/haskell-example-internal/: setup-config
x86_64-linux/ghc-8.10.7/haskell-example-0.0.0/t/haskell-example-test/: setup-config
x86_64-linux/ghc-9.0.2/haskell-example-0.0.0/: setup-config
x86_64-linux/ghc-9.0.2/haskell-example-0.0.0/cache/: build  config  registration
x86_64-linux/ghc-9.0.2/haskell-example-0.0.0/l/haskell-example-internal/: setup-config
x86_64-linux/ghc-9.0.2/haskell-example-0.0.0/t/haskell-example-test/: setup-config
x86_64-linux/ghc-9.2.2/haskell-example-0.0.0/: setup-config
x86_64-linux/ghc-9.2.2/haskell-example-0.0.0/cache/: build  config  registration
x86_64-linux/ghc-9.2.2/haskell-example-0.0.0/l/haskell-example-internal/: setup-config
(+36 files in other folders)
