cabal-version:  3.0
name:           haskell-example
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/haskell-example/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       Example Haskell Library
description:

    This package provides an example of a Haskell library.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        ScopedTypeVariables
        TypeApplications
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/haskell-example

library
    import:
        common-extensions
    hs-source-dirs:
        src/haskell-example
    exposed-modules:
        Example
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , haskell-example-internal

library haskell-example-internal
    import:
        common-extensions
    hs-source-dirs:
        src/haskell-example-internal
    exposed-modules:
        Example.Internal
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5

test-suite haskell-example-test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/haskell-example-test
    other-modules:
        ExampleSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        base >=4.7 && <5
      , haskell-example
      , hspec
